--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,14 @@
 
 en:
   hello: "Hello world"
+
+  number:
+    currency:
+      format:
+        delimiter: .
+        format: ! '%u%n'
+        precision: 2
+        separator: ! '.'
+        significant: false
+        strip_insignificant_zeros: false
+        unit: €
